# bitwarden-sdk-sm-ohos

./: .prettierignore  Cargo.toml  package-lock.json  package.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: build-cli-docker.yml  build-cli.yml  build-cpp.yml  build-dotnet.yml  build-go.yaml  build-java.yml  build-napi.yml  build-python-wheels.yml  build-ruby.yml  build-rust-crates.yml  build-rust-cross-platform.yml  build-wasm.yml  cloc.yml  direct-minimal-versions.yml  enforce-labels.yml  generate_schemas.yml  lint.yml  minimum-rust-version.yml  publish-bws.yml  publish-dotnet.yml  publish-java.yml  publish-napi.yml  publish-php.yml  publish-python.yml  publish-ruby.yml  publish-rust-crates.yml  publish-wasm.yml  release-bws.yml  release-cpp.yml  release-dotnet.yml  release-go.yml  release-java.yml  release-napi.yml  release-python.yml  release-ruby.yml  release-rust-crates.yml  release-wasm.yml  rust-test.yml  rustdoc.yml  scan.yml  (+3 more)
crates/bitwarden/: CHANGELOG.md  README.md
crates/bitwarden-json/: Cargo.toml
crates/bitwarden-json/src/: client.rs
crates/bitwarden-ohos/: Cargo.toml  env.sh  构建说明.md
crates/bitwarden-ohos/src/: client.rs  lib.rs
crates/bitwarden-py/: Cargo.toml
crates/bitwarden/src/: error.rs  lib.rs
crates/bws/: CHANGELOG.md  Cargo.toml  Dockerfile  setup.sh  test.sh
crates/bws/src/command/: secret.rs
crates/fake-server/: Cargo.toml  README.md
crates/fake-server/scripts/: test_bws.sh
crates/fake-server/src/: lib.rs  main.rs  routes.rs
languages/js/sdk-client/: package-lock.json
languages/python/: README.md  pyproject.toml  setup.sh  test.sh
languages/python/test/: crud.py
scripts/: bootstrap.sh
