[package]
name    = "bitwarden-ohos"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitwarden-json = { path = "../bitwarden-json", version = "0.3.0", features = [
    "secrets",
] }
napi-ohos = { version = "1.1.0", default-features = false, features = [
    "napi8",
    "async",
    "serde-json",
    "tokio"
] }
napi-derive-ohos = { version = "1.1.0" }
ohos-hilog-binding = {version = "*", features = ["redirect"]}
tracing-subscriber = "0.3.19"
tracing-core = "0.1.34"
tracing = "0.1.41"

[build-dependencies]
napi-build-ohos = { version = "1.1.0" }

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

[lints]
workspace = true