[package]
name = "fake-server"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bitwarden-sm = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }

[[bin]]
name = "fake-server"
path = "src/main.rs"
